--- a/frontend/tutorials/_05_jquery/index.html
+++ b/frontend/tutorials/_05_jquery/index.html
@@ -20,7 +20,7 @@
 <body class="container">
     <!-- start codes -->
     <div>
-        <p class="jquery_id">Normal bir yazıyım</p>
+        <p id="jquery_id">Normal bir yazıyım</p>
     </div>
 
 
