css group selector

--- a/frontend/tutorials/_05_jquery/index.html
+++ b/frontend/tutorials/_05_jquery/index.html
@@ -20,9 +20,17 @@
 <body class="container">
     <!-- start codes -->
     <div>
-        <p id="jquery_id">Normal bir yazıyım</p>
+        <p id="jquery_id">Normal bir yazıyım </p>
     </div>
+    <p>html</p>
+    <p>js</p>
 
+    <ul>
+        <li>css 1</li>
+        <li>css 2</li>
+        <li>css 3</li>
+        <li>css 4</li>
+    </ul>
 
 
     <!-- ends codes -->
