--- a/frontend/tutorials/_05_jquery/index.html
+++ b/frontend/tutorials/_05_jquery/index.html
@@ -32,6 +32,9 @@
         <li>css 4</li>
     </ul>
 
+    <p id="deneme44">lorem</p>
+    <p id="deneme33">lorem33</p>
+
 
     <!-- ends codes -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js "></script>
