--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,6 +22,8 @@
     <!-- Jquery ui  and js    -->
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="template.js"></script>
+
 </head>
 
 <body>
@@ -32,7 +34,9 @@
         <!-- container-fluid -->
         <div class="container">
             <a class="navbar-brand" href="index.html">LOGO</a>
-            <button style="display:none44;" class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+            <button style="display:none44;" class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavId">
@@ -47,12 +51,17 @@
 
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
                             <i class="fa fa-user"></i> Üye
                         </a>
                         <div class="dropdown-menu" aria-labelledby="dropdownId">
-                            <a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#register" href="#">Üye Ol</a>
-                            <a class="dropdown-item" href="#">Üye Giriş</a>
+                            <!-- uye ol -->
+                            <a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#register" href="#">Üye
+                                Ol</a>
+                            <!-- uye girişi -->
+                            <button class="dropdown-item" id="btn_giris"> <i class="fa fa-user-lock"></i> Üye
+                                Giriş</button>
                         </div>
                     </li>
                 </ul>
@@ -65,6 +74,47 @@
         </div>
     </nav>
 
+    <!-- login start -->
+    <div class="modal fade" id="myUye" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Üye Girişi</h5>
+                    <button type="button" class="btn-close btn-danger" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+
+                        <div class="form-control">
+                            <input type="text" id="user_email" name="user_email" placeholder="Email adresinizi giriniz"
+                                class="form-control">
+                            <span id="validation_email" class="text-danger"></span>
+                        </div>
+                        <div class="form-control">
+                            <input type="password" id="user_password" 
+                            placeholder="Passwordu giriniz"name="user_password" class="form-control">
+                            <span id="validation_password" class="text-danger"></span>
+                        </div>
+
+                        <div class="mt-3">
+                            <input type="reset" class="btn btn-danger text-uppercase" value="temizle">
+                            <button id="btnSubmit" type="submit" class="btn btn-primary text-uppercase">Gönder
+                            </button>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Kapat</button>
+                    <button type="button" class="btn btn-primary">Kaydet</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- login ends -->
+
     <!--modal start register  -->
     <!-- Modal -->
     <div class="modal fade" id="register" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
@@ -72,21 +122,26 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Üye Ol</h5>
-                    <button type="button" class="btn-close btn-danger" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close btn-danger" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <form method="post" action="index.htm">
                         <div class="form-control">
-                            <label for="name_surname">Adınız Soyadınız</label> <input type="text" id="name_surname" name="name_surname" class="form-control" required autofocus>
+                            <label for="name_surname">Adınız Soyadınız</label> <input type="text" id="name_surname"
+                                name="name_surname" class="form-control" required autofocus>
                         </div>
                         <div class="form-control">
-                            <label for="email">Email</label> <input type="email" id="email" name="email" class="form-control" required>
+                            <label for="email">Email</label> <input type="email" id="email" name="email"
+                                class="form-control" required>
                         </div>
                         <div class="form-control">
-                            <label for="password">Şifre</label> <input type="password" id="password" name="password" class="form-control" required>
+                            <label for="password">Şifre</label> <input type="password" id="password" name="password"
+                                class="form-control" required>
                         </div>
                         <div class="form-control">
-                            <label for="re_password">Şifre tekrarı</label> <input type="password" id="re_password" name="re_password" class="form-control" required>
+                            <label for="re_password">Şifre tekrarı</label> <input type="password" id="re_password"
+                                name="re_password" class="form-control" required>
                         </div>
                         <div class="mt-3">
                             <input type="reset" class="btn btn-danger text-uppercase" value="temizle">
@@ -125,9 +180,14 @@
                     <div class="card left_side">
                         <img class="card-img-top" src="img/peace-gd361c86f0_1920.jpg" alt="resim yok">
                         <div class="card-body ">
+                            <h1 id="deneme44">Ben jqueryim</h1>
                             <h4 class="card-title ">html Lorem, ipsum dolor.</h4>
-                            <p class="card-text line-clamp5 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint omnis ipsa deserunt aspernatur officiis dignissimos saepe pariatur voluptate cupiditate. Nemo eaque delectus placeat sequi qui assumenda numquam in! Facilis, consectetur!
-                                tibus doloremque voluptate! Fuga beatae magni architecto iste veritatis eum ad harum unde ducimus mollitia.
+                            <p class="card-text line-clamp5 ">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Sint omnis ipsa deserunt aspernatur officiis dignissimos saepe pariatur voluptate
+                                cupiditate. Nemo eaque delectus placeat sequi qui assumenda numquam in! Facilis,
+                                consectetur!
+                                tibus doloremque voluptate! Fuga beatae magni architecto iste veritatis eum ad harum
+                                unde ducimus mollitia.
                             </p>
                         </div>
                         <div class="card-footer ">
@@ -139,8 +199,12 @@
                         <img class="card-img-top " src="img/seashells-g57d230491_1920.jpg " alt="resim yok ">
                         <div class="card-body ">
                             <h4 class="card-title ">html Lorem, ipsum dolor.</h4>
-                            <p class="card-text line-clamp5 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint omnis ipsa deserunt aspernatur officiis dignissimos saepe pariatur voluptate cupiditate. Nemo eaque delectus placeat sequi qui assumenda numquam in! Facilis, consectetur!
-                                tibus doloremque voluptate! Fuga beatae magni architecto iste veritatis eum ad harum unde ducimus mollitia.
+                            <p class="card-text line-clamp5 ">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Sint omnis ipsa deserunt aspernatur officiis dignissimos saepe pariatur voluptate
+                                cupiditate. Nemo eaque delectus placeat sequi qui assumenda numquam in! Facilis,
+                                consectetur!
+                                tibus doloremque voluptate! Fuga beatae magni architecto iste veritatis eum ad harum
+                                unde ducimus mollitia.
                             </p>
                         </div>
                         <div class="card-footer ">
@@ -152,8 +216,12 @@
                         <img class="card-img-top " src="img/stork-g95907df0f_1920.jpg " alt="resim yok ">
                         <div class="card-body ">
                             <h4 class="card-title ">html Lorem, ipsum dolor.</h4>
-                            <p class="card-text line-clamp5 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint omnis ipsa deserunt aspernatur officiis dignissimos saepe pariatur voluptate cupiditate. Nemo eaque delectus placeat sequi qui assumenda numquam in! Facilis, consectetur!
-                                tibus doloremque voluptate! Fuga beatae magni architecto iste veritatis eum ad harum unde ducimus mollitia.
+                            <p class="card-text line-clamp5 ">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Sint omnis ipsa deserunt aspernatur officiis dignissimos saepe pariatur voluptate
+                                cupiditate. Nemo eaque delectus placeat sequi qui assumenda numquam in! Facilis,
+                                consectetur!
+                                tibus doloremque voluptate! Fuga beatae magni architecto iste veritatis eum ad harum
+                                unde ducimus mollitia.
                             </p>
                         </div>
                         <div class="card-footer ">
@@ -165,8 +233,12 @@
                         <img class="card-img-top " src="img/peace-genius-g7d75f16c5_1920.jpg " alt="resim yok ">
                         <div class="card-body ">
                             <h4 class="card-title ">html Lorem, ipsum dolor.</h4>
-                            <p class="card-text line-clamp5 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint omnis ipsa deserunt aspernatur officiis dignissimos saepe pariatur voluptate cupiditate. Nemo eaque delectus placeat sequi qui assumenda numquam in! Facilis, consectetur!
-                                tibus doloremque voluptate! Fuga beatae magni architecto iste veritatis eum ad harum unde ducimus mollitia.
+                            <p class="card-text line-clamp5 ">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Sint omnis ipsa deserunt aspernatur officiis dignissimos saepe pariatur voluptate
+                                cupiditate. Nemo eaque delectus placeat sequi qui assumenda numquam in! Facilis,
+                                consectetur!
+                                tibus doloremque voluptate! Fuga beatae magni architecto iste veritatis eum ad harum
+                                unde ducimus mollitia.
                             </p>
                         </div>
                         <div class="card-footer ">
@@ -178,8 +250,12 @@
                         <img class="card-img-top " src="img/peace-gd361c86f0_1920.jpg " alt="resim yok ">
                         <div class="card-body ">
                             <h4 class="card-title ">html Lorem, ipsum dolor.</h4>
-                            <p class="card-text line-clamp5 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint omnis ipsa deserunt aspernatur officiis dignissimos saepe pariatur voluptate cupiditate. Nemo eaque delectus placeat sequi qui assumenda numquam in! Facilis, consectetur!
-                                tibus doloremque voluptate! Fuga beatae magni architecto iste veritatis eum ad harum unde ducimus mollitia.
+                            <p class="card-text line-clamp5 ">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Sint omnis ipsa deserunt aspernatur officiis dignissimos saepe pariatur voluptate
+                                cupiditate. Nemo eaque delectus placeat sequi qui assumenda numquam in! Facilis,
+                                consectetur!
+                                tibus doloremque voluptate! Fuga beatae magni architecto iste veritatis eum ad harum
+                                unde ducimus mollitia.
                             </p>
                         </div>
                         <div class="card-footer ">
@@ -200,7 +276,8 @@
                     <!-- en  çok ziyaret edilen sayfalar -->
                     <div class="card mt-3" style="background: #e1f0ff;">
                         <div class="card-header">
-                            <h5 class="text-center text-uppercase text-capitalize  text-black">En Çok Ziyaret Edilen Sayfalar</h5>
+                            <h5 class="text-center text-uppercase text-capitalize  text-black">En Çok Ziyaret Edilen
+                                Sayfalar</h5>
                         </div>
                         <div class="card-body" id="visited_hit">
                             <ul>
@@ -272,6 +349,7 @@
     <!-- ends codes -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js "></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js "></script>
+
 </body>
 
 </html>
