--- a/frontend/index.html
+++ b/frontend/index.html
@@ -74,6 +74,7 @@
         </div>
     </nav>
 
+
     <!-- login start -->
     <div class="modal fade" id="myUye" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -84,16 +85,16 @@
                         aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form>
+                    <form onsubmit="onSubmitFunction()">
 
                         <div class="form-control">
                             <input type="text" id="user_email" name="user_email" placeholder="Email adresinizi giriniz"
-                                class="form-control">
+                                class="form-control" autocomplete="current-password">
                             <span id="validation_email" class="text-danger"></span>
                         </div>
                         <div class="form-control">
-                            <input type="password" id="user_password" 
-                            placeholder="Passwordu giriniz"name="user_password" class="form-control">
+                            <input type="password" id="user_password" placeholder="Passwordu giriniz"
+                                name="user_password" class="form-control" autocomplete="current-password">
                             <span id="validation_password" class="text-danger"></span>
                         </div>
 
@@ -111,6 +112,13 @@
             </div>
         </div>
     </div>
+
+    <script>
+        // formu submit yapmadan önce çalıştıırılacak kodlar
+        function onSubmitFunction() {
+            alert("submitted value 44");
+        }
+    </script>
 
 
     <!-- login ends -->
