--- a/frontend/react/_01_react.html
+++ b/frontend/react/_01_react.html
@@ -7,13 +7,16 @@
     <title>React ES TS Hoşgeldiniz</title>
 </head>
 <body>
+    <div id="root"></div>
 
-
+<!-- react CDN -->
 <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
 
 <script>
-    
+    var template=React.createElement("h3",null,"babel olmadan yazıldı");
+    var root=document.getElementById("root");
+    ReactDOM.render(template,root);
 </script>
     
 </body>
