--- a/frontend/react/_02_react_babel.html
+++ b/frontend/react/_02_react_babel.html
@@ -16,13 +16,14 @@
     <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
 
-   <script>
+    <!-- <script>
         // var template = React.createElement("h3", null, "babel olmadan yazıldı");
         var template = React.createElement("h3", {id:"h3_id"}, "babel olmadan yazıldı");
 
         var root = document.getElementById("root");
         ReactDOM.render(template, root);
-    </script> 
+    </script> -->
+    <script src="../public/app.js"></script>
 
 </body>
 
