--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,7 +31,35 @@
         <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script> 
     -->
 
+    <!-- session storage: browser veri saklamak ve browser kapatıldığında silinir -->
+    <script>
+        //DB,Socket, Datas
+        let sessionDataNameArray = ["key_name", "Hamit Mızrak"];
+        let sessionJobArray = ["key_job", "Bilgisayar Mühendisi"]
+        const sessionAdi = sessionStorage.setItem(sessionDataNameArray[0], sessionDataNameArray[1]);
+        const sessionMeslek = sessionStorage.setItem(sessionJobArray[0], sessionJobArray[1]);
+        console.log(sessionStorage)
+    </script>
 
+    <!-- local storage: browser veri saklamak ve browser kapatıldığında  silinmez -->
+    <script>
+        //DB,Socket, Datas
+        let localDataNameArray = ["key_name44", "Hamit Mızrak44"];
+        let localJobArray = ["key_job44", "Bilgisayar Mühendisi44"]
+        const localAdi = localStorage.setItem(localDataNameArray[0], localDataNameArray[1]);
+        const locallMeslek = localStorage.setItem(localJobArray[0], localJobArray[1]);
+        console.log(localStorage)
+
+        //get
+        const getLocalStorage=localStorage.getItem(localDataNameArray[0]);
+        console.log(getLocalStorage)
+
+        //remove
+        const removeItem=localStorage.removeItem(localDataNameArray[0]);
+
+        //clear
+        localStorage.clear();
+    </script>
 
 </head>
 
@@ -441,8 +469,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js "></script>
 
     <script src="template.js"></script>
-</body>
+<!-- session storage -->
 
-</html>
+</body>
 
 </html>
